--- a/css/styles.css
+++ b/css/styles.css
@@ -234,7 +234,7 @@ nav ul li a:hover{
     cursor: pointer;
 }
 
-@media only screen and (max-width: 650px){
+@media only screen and (min-width: 650px){
     .server{
         width: 50%;
     }
